--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "everything-random",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A lightweight package to make your life so much easier",
-  "main": "src/index.js",
+  "main": "src/functions.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
